--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^9.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
